# otus-module3-bulkmt

./: .travis.yml  CMakeLists.txt  README.md
res/docker/: Dockerfile
src/: CMakeLists.txt  forward.h  interpreter.cpp  interpreter.h  logger.cpp  logger.h  main.cpp  reader.cpp  reader.h  reader_subscriber.h  statement.cpp  statement.h  statement_factory.cpp  statement_factory.h
test/: CMakeLists.txt  test_interpreter.cpp  test_reader.cpp  test_statement.cpp  utils.h
